--- a/notebook/99_petitions_classification_final.ipynb
+++ b/notebook/99_petitions_classification_final.ipynb
@@ -93,6 +93,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "# check directory\n",
+    "if not os.path.exists('data'):\n",
+    "    os.makedirs('data')\n",
+    "\n",
     "dataset_file_path = 'data/petitions-assembly-dataset.csv'\n",
     "df_extracted.to_csv(dataset_file_path, index=False)\n",
     "\n",
@@ -421,7 +427,7 @@
     "\n",
     "vectors = Vectors(name=tokens_w2v_path)\n",
     "\n",
-    "TEXT.build_vocab(train, vectors=vectors, min_freq=1, max_size=None)\n",
+    "TEXT.build_vocab(train, vectors = vectors, min_freq = 1, max_size = None)\n",
     "LABEL.build_vocab(train)\n",
     "\n",
     "vocab = TEXT.vocab\n",
@@ -430,12 +436,188 @@
     "\n",
     "train_iter, validation_iter = BucketIterator.splits(\n",
     "    datasets=(train, validation),\n",
-    "    batch_sizes=8,\n",
+    "    batch_size=8,\n",
     "    device=device,\n",
     "    sort=False\n",
     ")\n",
     "\n",
     "print(f'임베팅 벡터의 개수와 차원 {TEXT.vocab.vectors.shape}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. TextCNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[TextCNN 모델링]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn   \n",
+    "import torch.optim as optim \n",
+    "import torch.nn.functional as F \n",
+    "\n",
+    "class TextCNN(nn.Module): \n",
+    "    \n",
+    "    def __init__(self, vocab_built, emb_dim, dim_channel, kernel_wins, num_class):\n",
+    "        \n",
+    "        super(TextCNN, self).__init__()\n",
+    "        \n",
+    "        self.embed = nn.Embedding(len(vocab_built), emb_dim)\n",
+    "        self.embed.weight.data.copy_(vocab_built.vectors)      \n",
+    "    \n",
+    "        self.convs = nn.ModuleList([nn.Conv2d(1, dim_channel, (w, emb_dim)) for w in kernel_wins])\n",
+    "        self.relu = nn.ReLU()                \n",
+    "        self.dropout = nn.Dropout(0.4)         \n",
+    "        self.fc = nn.Linear(len(kernel_wins)*dim_channel, num_class)     \n",
+    "        \n",
+    "    def forward(self, x):  \n",
+    "      \n",
+    "        emb_x = self.embed(x)           \n",
+    "        emb_x = emb_x.unsqueeze(1)  \n",
+    "\n",
+    "        con_x = [self.relu(conv(emb_x)) for conv in self.convs]       \n",
+    "\n",
+    "        pool_x = [F.max_pool1d(x.squeeze(-1), x.size()[2]) for x in con_x]    \n",
+    "        \n",
+    "        fc_x = torch.cat(pool_x, dim=1) \n",
+    "        fc_x = fc_x.squeeze(-1)       \n",
+    "        fc_x = self.dropout(fc_x)         \n",
+    "\n",
+    "        logit = self.fc(fc_x)     \n",
+    "        \n",
+    "        return logit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[모델 학습 함수 정의]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, device, train_itr, optimizer):\n",
+    "    \n",
+    "    model.train()                               \n",
+    "    corrects, train_loss = 0.0,0        \n",
+    "    \n",
+    "    for batch in train_itr:\n",
+    "        \n",
+    "        text, target = batch.text, batch.label      \n",
+    "        text = torch.transpose(text, 0, 1)          \n",
+    "        target.data.sub_(1)                                 \n",
+    "        text, target = text.to(device), target.to(device)  \n",
+    "\n",
+    "        optimizer.zero_grad()                           \n",
+    "        logit = model(text)                         \n",
+    "    \n",
+    "        loss = F.cross_entropy(logit, target)   \n",
+    "        loss.backward()  \n",
+    "        optimizer.step()  \n",
+    "        \n",
+    "        train_loss += loss.item()    \n",
+    "        result = torch.max(logit,1)[1] \n",
+    "        corrects += (result.view(target.size()).data == target.data).sum()\n",
+    "        \n",
+    "    train_loss /= len(train_itr.dataset)\n",
+    "    accuracy = 100.0 * corrects / len(train_itr.dataset)\n",
+    "\n",
+    "    return train_loss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[모델 평가 함수 정의]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(model, device, itr):\n",
+    "    \n",
+    "    model.eval()\n",
+    "    corrects, test_loss = 0.0, 0\n",
+    "\n",
+    "    for batch in itr:\n",
+    "        \n",
+    "        text = batch.text\n",
+    "        target = batch.label\n",
+    "        text = torch.transpose(text, 0, 1)\n",
+    "        target.data.sub_(1)\n",
+    "        text, target = text.to(device), target.to(device)\n",
+    "        \n",
+    "        logit = model(text)\n",
+    "        loss = F.cross_entropy(logit, target)\n",
+    "\n",
+    "        test_loss += loss.item()\n",
+    "        result = torch.max(logit,1)[1]\n",
+    "        corrects += (result.view(target.size()).data == target.data).sum()\n",
+    "\n",
+    "    test_loss /= len(itr.dataset) \n",
+    "    accuracy = 100.0 * corrects / len(itr.dataset)\n",
+    "    \n",
+    "    return test_loss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[모델 학습 및 성능 확인]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = TextCNN(vocab, 100, 10, [3, 4, 5], 2).to(device)\n",
+    "print(model)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "best_test_acc = -1\n",
+    "\n",
+    "for epoch in range(1, 3+1):\n",
+    " \n",
+    "    tr_loss, tr_acc = train(model, device, train_iter, optimizer) \n",
+    "    print('Train Epoch: {} \\t Loss: {} \\t Accuracy: {}%'.format(epoch, tr_loss, tr_acc))\n",
+    "    \n",
+    "    val_loss, val_acc = evaluate(model, device, validation_iter)\n",
+    "    print('Valid Epoch: {} \\t Loss: {} \\t Accuracy: {}%'.format(epoch, val_loss, val_acc))\n",
+    "        \n",
+    "    if val_acc > best_test_acc:\n",
+    "        best_test_acc = val_acc\n",
+    "        \n",
+    "        print(\"model saves at {} accuracy\".format(best_test_acc))\n",
+    "        torch.save(model.state_dict(), \"TextCNN_Best_Validation\")\n",
+    "    \n",
+    "    print('-----------------------------------------------------------------------------')"
    ]
   }
  ],
